#616 fixes for property profile on mobile/tablet

--- a/common/MobileHeader/styles.module.scss
+++ b/common/MobileHeader/styles.module.scss
@@ -3,7 +3,7 @@
 .header {
   display: grid;
   grid-gap: 0 $global-padding;
-  grid-template-columns: 30% 1fr 30%;
+  grid-template-columns: 25% 1fr 25%;
   grid-template-areas:
     'left center right'
     'bottom bottom bottom'
@@ -62,6 +62,7 @@
   // Centeral content
   &__main {
     grid-area: center;
+    overflow: hidden;
   }
 
   // Left and/or right
@@ -91,6 +92,9 @@
     line-height: rem-calc(22);
     text-align: center;
     color: $white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   // Title text alternative
